--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Little Design Geek - Michelle's Portfolio</title>
 
     <!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Oxygen:300,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Lobster+Two:400' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,700' rel='stylesheet' type='text/css'>
 
     <!-- Style Sheet  -->
 	<link rel="stylesheet" href="css/foundation.css" type="text/css" />
